# CodeSpectra

./: .gitignore  ANALYSIS_AGENTS.md  COMMANDS.md  KNOWN_LIMITATIONS.md  RAG_INDEXING_CHUNKING_NOTES.md  README.md  SETUP.md  TECHNICAL_OVERVIEW.md  description.md  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json  vitest.config.mjs
backend/: main.py  pyproject.toml
backend/api/: analysis.py  app.py  consent.py  github.py  job.py  local_repo.py  manifest.py  provider.py  repo_map.py  retrieval.py  structural_graph.py  sync.py  workspace.py
backend/domain/: snapshot_cleanup.py
backend/domain/analysis/: __init__.py  agent_pipeline.py  diff.py  model_guard.py  orchestrator.py  profiles.py  prompts.py  retrieval_broker.py  schemas.py  service.py  static_convention.py  static_risk.py  types.py
backend/domain/github_host/: service.py  types.py
backend/native/: chunker_native.cpp  graph_native.cpp
backend/scripts/: build_native_chunker.py  build_native_graph.py
backend/shared/: errors.py  git_utils.py  logger.py  sql_queries.py  toolchain.py  utils.py
backend/tests/: conftest.py  test_agents_contract.py  test_analysis_pipeline.py  test_ast_chunker.py  test_ast_chunker_golden.py  test_ast_chunker_golden_complex.py  test_ast_chunker_golden_multilang.py  test_bm25_scorer.py  test_community_detection.py  test_graph_import_resolution.py  test_pipeline_memory_context.py  test_retrieval_scoring.py  test_structural_graph.py  test_structural_graph_fallback.py  test_symbol_reference_edges.py
(+205 files in other folders)
