[project]
name = "codespectra-backend"
version = "0.1.0"
description = "CodeSpectra analysis engine — Python backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "haystack-ai>=2.4.0",
    "pybind11>=2.13.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-languages>=1.10.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-c>=0.24.0",
    "tree-sitter-cpp>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]
analysis = [
    "numpy>=2.1.0",
    "networkx>=3.4.0",
    "scikit-learn>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "domain", "infrastructure", "shared"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
